--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - ci
 
 jobs:
   build:
@@ -15,7 +18,9 @@ jobs:
         with:
           node-version: 14
 
-      - name: Run markdown lint
-      - run: |
-         npm install remark-cli remark-preset-lint-consistent
-         npx remark . --use remark-preset-lint-consistent --frail
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build and test
+        run: npm run build
+
