--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,8 @@ jobs:
         with:
           node-version: 14
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build and test
-        run: npm run build
+      - name: Run markdown lint
+        run: |
+         npm install remark-cli remark-preset-lint-consistent
+         npx remark . --use remark-preset-lint-consistent --frail
 
